Fix img scaling issue and add gap to quote section

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ ul {
 }
 
 .header.image {
+    max-width: 100%;
     width: 32rem;
     height: auto;
     box-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
@@ -168,6 +169,7 @@ h2 {
     background-color: rgb(198, 198, 198);
     justify-content: center;
     flex-direction: column;
+    gap: 3rem;
 }
 
 .container.four * {
